# openzfs

cmd/: Makefile.am  ztest.c
cmd/uzpoold/: Makefile.am  uzpoold.c
cmd/zdb/: zdb_il.c
cmd/zfs/: zfs_iter.c  zfs_iter.h  zfs_main.c
cmd/zpool/: zpool_main.c  zpool_vdev.c
cmd/ztest/: ztest.c
config/: Rules.am
include/: Makefile.am  libzfs.h  libzfs_core.h  libzfs_impl.h  libzutil.h  zfeature_common.h  zfs_sock.h
include/os/freebsd/: Makefile.am
include/os/linux/: Makefile.am
include/sys/: activemap.h  brt.h  dbuf.h  dmu.h  sid.h  spa.h  spa_impl.h  vdev.h  vdev_impl.h  vdev_raidy.h  zfs_acl.h  zfs_context.h  zfs_fuid.h  zfs_ioctl.h  zfs_ioctl_impl.h  zfs_iolimit.h  zfs_onexit.h  zfs_sa.h  zfs_vfsops.h  zfs_vnops.h  zfs_znode.h  zil.h  zio.h  zio_impl.h
include/sys/fm/: util.h
include/sys/fs/: zfs.h
lib/libzfs/: libzfs.abi  libzfs_dataset.c  libzfs_impl.h  libzfs_iter.c  libzfs_mount.c  libzfs_pool.c  libzfs_util.c
lib/libzfs_core/: Makefile.am  libzfs_core.c
lib/libzpool/: Makefile.am  kernel.c  zfs_user_ioctl.c
lib/libzutil/: Makefile.am  zutil_sock.c
man/man7/: zpoolprops.7
module/: Kbuild.in  Makefile.bsd
module/zcommon/: zfeature_common.c  zfs_namecheck.c  zpool_prop.c
module/zfs/: activemap.c  bpobj.c  brt.c  btree.c  dbuf.c  dmu.c  dmu_recv.c  dmu_send.c  dnode.c  dsl_dir.c  dsl_pool.c  dsl_scan.c  fm.c  spa.c  spa_misc.c  vdev.c  vdev_cache.c  vdev_raidy.c  vdev_rebuild.c  zcp_get.c  zfs_fm.c  zfs_fuid.c  zfs_ioctl.c  zfs_quota.c  zfs_replay.c  zfs_sa.c  zfs_vfsops.c  zfs_vnops.c  zfs_znode.c  zil.c  zio.c  zvol.c
(+71 files in other folders)
